# sphinx-simpleopenapi

./: .gitignore  README.rst  pyproject.toml  spec.yml
sphinx_simpleopenapi/: __init__.py  errors.py  main.py  utils.py
tests/: test_sphinx_openapi_new.py
